--- a/be/package.json
+++ b/be/package.json
@@ -49,6 +49,8 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^9.0.0",
+    "@loopback/authentication-jwt": "^0.12.0",
     "@loopback/boot": "^5.0.0",
     "@loopback/core": "^4.0.0",
     "@loopback/repository": "^5.0.0",
